--- a/reservation.html
+++ b/reservation.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -44,8 +45,8 @@
                     <input type="email" placeholder="Email" required>
                     <div class="row">
                         <input type="number" placeholder="Guests" min="1" required>
-                        <input type="date" placeholder="Date" required>
-                        <input type="time" placeholder="Time" required>
+                        <input type="date" required>
+                        <input type="time" required>
                     </div>
                     <button type="submit">Reserve</button>
                 </form>
