--- a/menu.html
+++ b/menu.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -48,7 +49,7 @@
                 <h1>Maki</h1>
             </div>
             <div class="menu-item">
-                <img src="./images/pexels-yang-hao-10692500 1.png" class="menu-item-img" alt="Spicy Tuna Maki">
+                <img src="./images/pexels-yang-hao-106925001.png" class="menu-item-img" alt="Spicy Tuna Maki">
                 <div class="menu-content">
                     <div class="menu-item-title">
                         <span>Spicy Tuna Maki</span>
@@ -62,7 +63,7 @@
                 </div>
             </div>
             <div class="menu-item">
-                <img src="./images/pexels-yang-hao-10692500 1.png" class="menu-item-img" alt="Spicy Tuna Maki">
+                <img src="./images/pexels-yang-hao-106925001.png" class="menu-item-img" alt="Spicy Tuna Maki">
                 <div class="menu-content">
                     <div class="menu-item-title">
                         <span>Salmon Maki</span>
@@ -76,7 +77,7 @@
                 </div>
             </div>
             <div class="menu-item">
-                <img src="./images/pexels-yang-hao-10692500 1.png" class="menu-item-img" alt="Spicy Tuna Maki">
+                <img src="./images/pexels-yang-hao-106925001.png" class="menu-item-img" alt="Spicy Tuna Maki">
                 <div class="menu-content">
                     <div class="menu-item-title">
                         <span>Mango Maki</span>
@@ -94,7 +95,7 @@
             </div>
 
             <div class="menu-item">
-                <img src="./images/pexels-yang-hao-10692500 1.png" class="menu-item-img" alt="Spicy Tuna Maki">
+                <img src="./images/pexels-yang-hao-106925001.png" class="menu-item-img" alt="Spicy Tuna Maki">
                 <div class="menu-content">
                     <div class="menu-item-title">
                         <span>Volcano Delight</span>
@@ -108,7 +109,7 @@
                 </div>
             </div>
             <div class="menu-item">
-                <img src="./images/pexels-yang-hao-10692500 1.png" class="menu-item-img" alt="Spicy Tuna Maki">
+                <img src="./images/pexels-yang-hao-106925001.png" class="menu-item-img" alt="Spicy Tuna Maki">
                 <div class="menu-content">
                     <div class="menu-item-title">
                         <span>Rainbow Fusion</span>
@@ -122,7 +123,7 @@
                 </div>
             </div>
             <div class="menu-item">
-                <img src="./images/pexels-yang-hao-10692500 1.png" class="menu-item-img" alt="Spicy Tuna Maki">
+                <img src="./images/pexels-yang-hao-106925001.png" class="menu-item-img" alt="Spicy Tuna Maki">
                 <div class="menu-content">
                     <div class="menu-item-title">
                         <span>Dragon Elegance</span>
@@ -136,7 +137,7 @@
                 </div>
             </div>
             <div class="menu-item">
-                <img src="./images/pexels-yang-hao-10692500 1.png" class="menu-item-img" alt="Spicy Tuna Maki">
+                <img src="./images/pexels-yang-hao-106925001.png" class="menu-item-img" alt="Spicy Tuna Maki">
                 <div class="menu-content">
                     <div class="menu-item-title">
                         <span>Tokyo Blossom</span>
@@ -154,7 +155,7 @@
             </div>
 
             <div class="menu-item">
-                <img src="./images/pexels-yang-hao-10692500 1.png" class="menu-item-img" alt="Spicy Tuna Maki">
+                <img src="./images/pexels-yang-hao-106925001.png" class="menu-item-img" alt="Spicy Tuna Maki">
                 <div class="menu-content">
                     <div class="menu-item-title">
                         <span>Sunrise Bliss</span>
@@ -168,7 +169,7 @@
                 </div>
             </div>
             <div class="menu-item">
-                <img src="./images/pexels-yang-hao-10692500 1.png" class="menu-item-img" alt="Spicy Tuna Maki">
+                <img src="./images/pexels-yang-hao-106925001.png" class="menu-item-img" alt="Spicy Tuna Maki">
                 <div class="menu-content">
                     <div class="menu-item-title">
                         <span>Mango Tango Fusion</span>
@@ -182,7 +183,7 @@
                 </div>
             </div>
             <div class="menu-item">
-                <img src="./images/pexels-yang-hao-10692500 1.png" class="menu-item-img" alt="Spicy Tuna Maki">
+                <img src="./images/pexels-yang-hao-106925001.png" class="menu-item-img" alt="Spicy Tuna Maki">
                 <div class="menu-content">
                     <div class="menu-item-title">
                         <span>Pacific Firecracker</span>
