--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div class="nav-item">
                 <img src="./images/restaurant.png" alt="">
-                <a href="./contact.html" class="button">RESTAURANT</a>
+                <a href="./about.html" class="button">About</a>
 
             </div>
             <!-- end nav item -->
