--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <!-- start hero -->
         <div class="hero">
-            <img src="./images/hero.png" alt="">
+            <img src="./images/hero.jpg" alt="">
             <h1 class="hero-text">Sushi Sensation</h1>
         </div>
         <!-- end hero -->
