--- a/about.html
+++ b/about.html
@@ -4,10 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Kitchen Menu</title>
+    <meta name="description" content="Discover The Kitchen, Prague's premier sushi destination. Learn about our story, opening hours, and award-winning culinary experience.">
+    <meta name="keywords" content="The Kitchen, sushi restaurant, Prague, opening hours, culinary excellence, Michelin Guide">
+    <meta name="author" content="The Kitchen">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="About The Kitchen - Sushi Artistry Redefined">
+    <meta property="og:description" content="Experience culinary craftsmanship and modern elegance at The Kitchen. Voted Best Steak House in Prague by Trip Advisor, Michelin Guide, and Star Dining.">
+    <meta property="og:type" content="website">
+    <title>About The Kitchen - Sushi Artistry Redefined in Prague</title>
     <link rel="stylesheet" href="./styles/commstyles.css">
     <link rel="stylesheet" href="./styles/app.css">
-
+    <link rel="icon" href="./icons/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
