--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Experience the Sushi Sensation at The Kitchen. Book a table for an unforgettable dining experience.">
+    <meta name="keywords" content="sushi, restaurant, Japanese cuisine, dining, reservations">
+    <meta name="author" content="The Kitchen">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="The Kitchen - Sushi Sensation">
+    <meta property="og:description" content="Discover exquisite sushi and Japanese cuisine at The Kitchen. Book your table now!">
+    <meta property="og:url" content="https://mohamed-amine-dhuibi.github.io/kitchen/">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/commstyles.css">
-    <title>The Kitchen</title>
+    <title>The Kitchen - Sushi Sensation</title>
 </head>
 
 <body>
@@ -14,9 +21,10 @@
     <div class="container">
         <div class="header">
             <div class="toggle_menu">
-                <img src="./icons/menu.svg" alt="">
+                <img src="./icons/menu.svg" alt="Toggle Menu">
             </div>
-            <a href="./index.html"><img src="./icons/image-removebg-preview.png" class="logo" alt="">
+            <a href="./index.html">
+                <img src="./icons/image-removebg-preview.png" class="logo" alt="The Kitchen Logo">
             </a>
             <div class="header-item">
                 <a href="./menu.html">Menu</a>
@@ -28,7 +36,7 @@
         </div>
         <!-- start hero -->
         <div class="hero">
-            <img src="./images/hero.jpg" alt="">
+            <img src="./images/hero.jpg" alt="Sushi Platter">
             <h1 class="hero-text">Sushi Sensation</h1>
         </div>
         <!-- end hero -->
@@ -39,7 +47,7 @@
             <!-- start nav item -->
 
             <div class="nav-item">
-                <img src="./images/menu.png" alt="">
+                <img src="./images/menu.png" alt="Menu Icon">
                 <a href="./menu.html" class="button">MENU</a>
             </div>
             <!-- end nav item -->
@@ -47,7 +55,7 @@
             <!-- start nav item -->
 
             <div class="nav-item">
-                <img src="./images/reservation.png" alt="">
+                <img src="./images/reservation.png" alt="Reservation Icon">
                 <a href="./reservation.html" class="button">RESERVATION</a>
 
             </div>
@@ -55,7 +63,7 @@
             <!-- start nav item -->
 
             <div class="nav-item">
-                <img src="./images/restaurant.png" alt="">
+                <img src="./images/restaurant.png" alt="Restaurant Icon">
                 <a href="./about.html" class="button">About</a>
 
             </div>
