--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Kitchen Menu</title>
+    <meta name="description" content="Explore The Kitchen's exquisite sushi menu featuring Maki, UraMaki, and Special Rolls. Indulge in our Spicy Tuna Maki, Rainbow Fusion, and Pacific Firecracker.">
+    <meta name="keywords" content="sushi menu, Maki, UraMaki, Special Rolls, Japanese cuisine, The Kitchen restaurant">
+    <meta name="author" content="The Kitchen">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="The Kitchen - Sushi Menu">
+    <meta property="og:description" content="Discover our diverse selection of sushi rolls, from classic Maki to innovative Special Rolls. Book your table for an unforgettable dining experience.">
+    <meta property="og:type" content="website">
+    <title>The Kitchen Menu - Sushi Delights</title>
     <link rel="stylesheet" href="./styles/commstyles.css">
     <link rel="stylesheet" href="./styles/app.css">
 
