--- a/reservation.html
+++ b/reservation.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Kitchen Menu</title>
-    <link rel="stylesheet" href="./styles/commstyles.css">
-    <link rel="stylesheet" href="./styles/app.css">
-
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Book a table at The Kitchen, Prague's premier sushi restaurant. Experience exceptional cuisine and remarkable dining in an elegant setting.">
+        <meta name="keywords" content="The Kitchen, sushi restaurant, Prague, table reservation, dining experience, book a table">
+        <meta name="author" content="The Kitchen">
+        <meta name="robots" content="index, follow">
+        <meta property="og:title" content="Reserve a Table at The Kitchen - Exceptional Sushi Dining">
+        <meta property="og:description" content="Secure your spot at The Kitchen, where exceptional sushi and a remarkable dining experience await. Book your table now!">
+        <meta property="og:type" content="website">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Book Your Table at The Kitchen - Sushi Excellence in Prague">
+        <meta name="twitter:description" content="Reserve your spot for an unforgettable sushi dining experience at The Kitchen in Prague. Book now!">
+        <title>Reserve a Table at The Kitchen - Exceptional Sushi Dining in Prague</title>
+        <link rel="stylesheet" href="./styles/commstyles.css">
+        <link rel="stylesheet" href="./styles/app.css">
+        <link rel="icon" href="./icons/favicon.ico" type="image/x-icon">
+    </head>
+    
 
 <body>
     <div class="container">
