Ui :sign in / sign up / menu currency converter

--- a/about.html
+++ b/about.html
@@ -30,6 +30,12 @@
             <div class="header-item">
                 <a href="./about.html">About</a>
             </div>
+            <div class="header-item">
+                <a href="./signup.html">Sign up</a>
+            </div>
+            <div class="header-item">
+                <a href="./signin.html">Sign in</a>
+            </div>
             <a href="./reservation.html" class="headerButton">BOOK A TABLE</a>
         </div>
 
